<resources>
    <string name="app_name">Stuart</string>
    <string name="title_activity_main">Stuart</string>
    <string name="server">http://34.218.249.207:3000</string>

    <string name="courses">Courses</string>
    <string name="schedule">Schedule</string>
    <string name="notices">Notices</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="done">Done</string>

    <string name="action_settings">Settings</string>
    <array name="branch">
        <item name="IT">Information Technology</item>
        <item name="COMP">Computer Engineering</item>
        <item name="ETRX">Electrical Engineering</item>
        <item name="ELEC">Electronics Engineering</item>
        <item name="MECH">Mechanical Engineering</item>
    </array>
    <array name="year">
        <item name="FY">FY</item>
        <item name="SY">SY</item>
        <item name="TY">TY</item>
        <item name="LY">LY</item>
    </array>
    <array name="div">
        <item name="A">A</item>
        <item name="B">B</item>
    </array>
    <array name="sem">
        <item name="EVEN">EVEN</item>
        <item name="ODD">ODD</item>
    </array>
    <string-array name="batch">
        <item name="one">1</item>
        <item name="two">2</item>
        <item name="three">3</item>
        <item name="four">4</item>
    </string-array>
</resources>
