<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_courses"
            android:icon="@mipmap/ic_courses"
            android:title="@string/courses" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@mipmap/ic_schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_notices"
            android:icon="@mipmap/ic_notices"
            android:title="@string/notices" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/about" />
    </group>

</menu>
